alert shifting content issue solved

--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -137,6 +137,7 @@ input:checked+.slider:before {
   justify-content: center;
   width: 100%;
   display: flex;
+  border-radius: 5px;
 }
 
 .login-button,
